# nonebot-plugin-guess-game

./: .flake8  README.md  minimal_bot.py  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  tbump.toml
.github/workflows/: routine-tests.yml  schedule-extend-noip.yml
nonebot_plugin_guess/: __init__.py  config.py  guess.py
tests/: test_config.py  test_nonebot_plugin_guess.py
