[tool.poetry]
name = "nonebot-plugin-guess"
version = "0.1.6"
description = "nobebot2插件《猜猜看》"
authors = ["freemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/nonebot-plugin-guess-game"

[tool.poetry.dependencies]
python = "^3.7.3"
# nonebot2 = "^2.0.0a13.post1"
logzero = "^1.6.3"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
python-dotenv = "^0.19.0"
nonebot-adapter-cqhttp = "^2.0.0-alpha.13"
nonebot2 = {git = "https://github.com/nonebot/nonebot2.git"}
pytz = "^2021.1"
pyquery = "^1.4.3"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.8.4"
pydocstyle = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
